testsuite/tests/typecheck/should_fail/StrictBinds.stderr

StrictBinds.hs:7:11: error: [GHC-20185]
    Recursive bindings for unlifted types aren't allowed:
      x = 3# +# y
      y = x
